<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.marcopettorali.remotepi.keyboard.KeyboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/esc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/esc_button" />

            <Button
                android:id="@+id/tab_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/tab_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.100000024">

            <Button
                android:id="@+id/ctrl_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:onLongClick="@{(view) -> viewModel.onLongClick(view)}"
                android:text="@string/ctrl_button" />

            <Button
                android:id="@+id/alt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:onLongClick="@{(view) -> viewModel.onLongClick(view)}"
                android:text="@string/alt_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout7"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.17000002">

            <Button
                android:id="@+id/arrow_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/arrow_left_button" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/arrow_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonColor"
                    android:onClick="@{(view)->viewModel.onClick(view)}"
                    android:text="@string/arrow_up_button" />

                <Button
                    android:id="@+id/arrow_down_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonColor"
                    android:onClick="@{(view)->viewModel.onClick(view)}"
                    android:text="@string/arrow_down_button" />
            </LinearLayout>

            <Button
                android:id="@+id/arrow_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/arrow_right_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout4"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/backspace_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:onLongClick="@{(view) -> viewModel.onLongClick(view)}"
                android:text="@string/backspace_button" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/home_button" />

            <Button
                android:id="@+id/end_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:onClick="@{(view)->viewModel.onClick(view)}"
                android:text="@string/end_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/sendTextEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textWebEditText"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/sendTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/send_text_button" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>